# arkaan-taal

./: CLAUDE.md  Cargo.toml  README.md
arkaan-vscode/: .vscodeignore  arkaan-icon-theme.json  package-lock.json  package.json
arkaan-vscode/snippets/: arkaan.json
arkaan-vscode/syntaxes/: arkaan.tmLanguage.json
examples/: basics.ark  hello.arc  hello.ark  math.ark  test_adt.arc  test_adt.ark  test_closure_debug.ark  test_functions.arc  test_functions.ark  test_gee_as.ark  test_hof.arc  test_hof.ark  test_immutable.ark  test_immutable_error.ark  test_immutable_error2.arc  test_lambdas.ark  test_lists.ark  test_locals.ark  test_pattern.arc  test_pattern.ark  test_pattern_simple.arc  test_pipe.ark  test_strings.arc  test_strings.ark  test_tco.arc  test_tco.ark
src/: ast.rs  compiler.rs  main.rs  parser.rs  vm.rs
src/lsp/: analysis.rs  main.rs
vscode-arcane/: README.md  arcane-icon-theme.json  arcane-lang-0.2.0.vsix  package-lock.json  package.json
vscode-arcane/snippets/: arcane.json
vscode-arcane/syntaxes/: arcane.tmLanguage.json
vscode-arkaan/: LICENSE.md  README.md  language-configuration.json  package.json
vscode-arkaan/snippets/: arkaan.json
vscode-arkaan/src/: extension.ts
